force-app/main/default/objects/breg_Rejection_Reason__c/breg_Rejection_Reason__c.object-meta.xml
<CustomObject>
    <label>Rejection Reason</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Rejection Reason Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejection Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>