force-app/main/default/objects/breg_Rejection_Reason__c/fields/breg_External_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>