force-app/main/default/objects/breg_Rejection_Reason__c/fields/breg_Form_Codes__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Codes__c</fullName>
    <label>Form Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Codes</valueSetName>
    </valueSet>
</CustomField>