force-app/main/default/objects/breg_Rejection_Reason__c/fields/breg_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>breg_Reason_Code__c</fullName>
    <label>Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>