force-app/main/default/objects/breg_Rejection_Reason__c/fields/breg_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>breg_Reason_Text__c</fullName>
    <label>Reason Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>